<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Lucas</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sync_track_progress">
        Processed <xliff:g>%1$d</xliff:g> of <xliff:g>%2$d</xliff:g> \t \t (Tap to cancel)
    </string>
    <string name="sync_finished_toast">
        Sync finished. Downloading <xliff:g>%1$d</xliff:g> tracks.
    </string>
    <!-- Settings strings -->
    <string name="pref_storage_location_label">Storage location</string>
    <string name="pref_storage_location_key" translatable="false">prefStorageLocation</string>

    <string name="pref_only_wifi_label">Only WIFI</string>
    <string name="pref_only_wifi_key" translatable="false">prefOnlyWIFI</string>
    <string name="pref_only_wifi_default" translatable="false">false</string>
    <string name="pref_only_wifi_summary">Disable network activity when not on wifi</string>

    <string name="pref_download_limit_label">Max number of downloads</string>
    <string name="pref_download_limit_key" translatable="false">prefMaxDownloads</string>
    <string name="pref_download_limit_default" translatable="false">10</string>
    <string name="pref_download_limit_summary">Limit the number of simultaneous downloads</string>
    <string-array name="pref_downloads_limit_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>

    <string name="pref_reset_database_label">Reset all data</string>
    <string name="pref_reset_database_summary">Deletes all records. Doesn\'t delete files and users</string>
    <string name="pref_reset_database_key" translatable="false">prefResetDatabase</string>

    <string name="pref_track_sync_limit_label">Sync limit</string>
    <string name="pref_track_sync_limit_key" translatable="false">prefSyncLimit</string>
    <string name="pref_track_sync_limit_default" translatable="false">10</string>
    <string name="pref_track_sync_limit_summary">Limit the number of tracks to sync</string>
    <string-array name="pref_track_sync_limit_entries">
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>Unlimited</item>
    </string-array>
    <string-array name="pref_track_sync_limit_values">
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>2147483647</item>     <!-- Integer.MAX_VALUE -->
    </string-array>

    <string name="pref_use_track_artwork_label">Use track artwork</string>
    <string name="pref_use_track_artwork_key" translatable="false">prefUseTrackArtwork</string>
    <string name="pref_use_track_artwork_default" translatable="false">false</string>
    <string name="pref_use_track_artwork_summary">Use the track artwork for album cover</string>

    <string name="pref_sync_user_playlists_label">Download user\'s playlists</string>
    <string name="pref_sync_user_playlists_default_key">prefUserDefaultPlaylistsDownload</string>
    <string name="pref_sync_user_playlists_key">prefUser<xliff:g>%1$d</xliff:g>PlaylistsDownload</string>
    <string name="pref_sync_user_playlists_default">true</string>
    <string name="pref_sync_user_playlists_summary">Sync all this user\'s playlists</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="scroll_offset">scroll_offset</string>
    <string name="no_sync_yet_label">No Sync Made Yet</string>
    <string name="last_sync_time">last_sync_time</string>
    <string name="tags_visible">tags_visible</string>
    <string name="track_title">track_title</string>
    <string name="track_album">track_album</string>
    <string name="track_artist">track_artist</string>
    <string name="track_artwork">track_artwork</string>
    <string name="stream_url">stream_url</string>
    <string name="download_url">download_url</string>
    <string name="artwork_url">artwork_url</string>
    <string name="track_id">track_id</string>

</resources>
